# montreal-heritage-ingestion

./: .dvcignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: ADR-001-four-stage-pipeline-architecture.md  ADR-002-dvc-for-pipeline-orchestration.md  ADR-003-sha256-row-hashing-for-idempotence.md  README.md
scripts/: download_raw_data.py
src/ingestion_patrimoine_mtl/: __init__.py  __main__.py  config.py  models.py  schemas.py
src/ingestion_patrimoine_mtl/pipeline/: __init__.py  s01_ingest.py  s02_clean.py  s03_normalize.py  s04_enrich.py
src/ingestion_patrimoine_mtl/utils/: __init__.py  geo.py  hashing.py  logging.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_clean.py  test_enrich.py  test_geo.py  test_hashing.py  test_ingest.py  test_normalize.py  test_schemas.py
