[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion-patrimoine-mtl"
version = "0.1.0"
description = "Pipeline d'ingestion RAG — Édifices patrimoniaux de Montréal"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # I/O & HTTP
    "requests>=2.32",
    "tqdm>=4.66",

    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",

    # Validation
    "pydantic>=2.7",
    "pandera[io]>=0.20",

    # Text cleaning
    "beautifulsoup4>=4.12",
    "ftfy>=6.2",
    "chardet>=5.2",

    # Chunking / tokenization
    "tiktoken>=0.7",

    # Geo (optionnel)
    "geopy>=2.4",

    # NLP français (optionnel, pour extraction entités)
    # "spacy>=3.7",

    # Versioning données
    "dvc>=3.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -q"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]